1 lombok config